--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -29,6 +29,7 @@ blocks:
           - echo $KEY >> my_data
           - echo $KEY
           - cache store --key $KEY --path cache_dir
+          - cat cache_dir/my_data
 
   - name: Use cache
     task:
