--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -23,10 +23,9 @@ blocks:
         commands:
           - checkout
           - export KEY=$(echo $(md5sum README.md) | grep -o "^\w*\b")
-          - cache restore --key $KEY
           - mkdir -p cache_dir
           - touch cache_dir/my_data
-          - echo $KEY >> my_data
+          - echo $KEY > my_data
           - echo $KEY
           - cache store --key $KEY --path cache_dir
           - cat cache_dir/my_data
